--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# About this project
+rom/
+nds/Pokemon - Platinum Version (Europe)_DSPRE_contents/
+nds/Pokemon - Platinum Version (Europe).nds
